Fix image file extension in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <h2>FEATURED PROJECTS</h2>
 <div class="projects">
 <div class="project-card">
-  <img src="img/SiteAllowance.png" alt="AllowanceSense">
+  <img src="img/SiteAllowance.PNG" alt="AllowanceSense">
   <div class="project-content">
     <h3>AllowanceSense</h3>
     <p>AllowanceSense is a PHP-based budgeting web application that helps students track expenses, manage allowances, and build responsible financial habits through real-time calculations, interactive design, and secure data handling.</p>
