--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
+<div class="page-transition"></div>
 <header class="HEADER">
   <a href="index.html">
   <img id="header-logo" class="header-logo" src="img/LOGO.png" alt="header-logo">
