--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/png" href="img/BLACK-LOGO.png" sizes="200x200">
+  <link rel="apple-touch-icon" href="img/BLACK-LOGO.png">
 </head>
 <body>
+  <div class="page-transition"></div>
   <header class="HEADER">
   <a href="index.html">
   <img id="header-logo" class="header-logo" src="img/LOGO.png" alt="header-logo">
@@ -38,7 +41,6 @@
 
 </div>
 
-    <!-- Project Card -->
     <div class="projects-card" data-category="web management">
       <img src="img/SiteAllowance.PNG" alt="AllowanceSense Screenshot" class="projects-image">
       <div class="project-content">
