--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,12 @@
   <img id="header-logo" class="header-logo" src="img/LOGO.png" alt="header-logo">
 </a>
 
+  <button class="hamburger" id="hamburger">
+  <span></span>
+  <span></span>
+  <span></span>
+  </button>
+
   <div class="header-right">
     <nav class="NAVIGATIONS">
       <a href="index.html">HOME</a>
@@ -34,7 +40,6 @@
 
     <div class="contact-wrapper">
 
-      <!-- LEFT CARD -->
       <div class="contact-card">
         <h2>Contact Information</h2>
         <p># 09761518104</p>
@@ -76,7 +81,6 @@
         </div>
       </div>
 
-      <!-- RIGHT CARD -->
       <div class="contact-card">
         <h2>Send a Message</h2>
 
