--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,12 @@
   <img id="header-logo" class="header-logo" src="img/LOGO.png" alt="header-logo">
 </a>
 
+  <button class="hamburger" id="hamburger">
+  <span></span>
+  <span></span>
+  <span></span>
+  </button>
+  
   <div class="header-right">
     <nav class="NAVIGATIONS">
       <a href="index.html">HOME</a>
