--- a/resume.html
+++ b/resume.html
@@ -50,8 +50,8 @@
           <ul class="resumea-contact-list">
             <li><span>Phone:</span> 0976-151-8104</li>
             <li><span>Email:</span> <a href="mailto:kestpatriarca18@gmail.com">kestpatriarca18@gmail.com</a></li>
-            <li><span>LinkedIn:</span> <a href="https://www.linkedin.com/in/kenneth-patriarca/" target="_blank" rel="noopener noreferrer">kenneth-patriarca</a></li>
-            <li><span>Portfolio:</span> kestpatriarca.dev</li>
+            <li><span>LinkedIn:</span> <a href="https://www.linkedin.com/in/kenneth-patriarca-a29807372/" target="_blank" rel="noopener noreferrer">kenneth-patriarca</a></li>
+            <li><span>Portfolio:</span> <a href="https://kestpatriarca.vercel.app/" target="_blank" rel="noopener noreferrer">kestpatriarca.vercel.app</a></li>
             <li><span>Address:</span> 3670 Delos Santos Street, Lourdes Northwest, Angeles City, Pampanga</li>
           </ul>
         </section>
