--- a/about.html
+++ b/about.html
@@ -131,10 +131,10 @@
   <div class="footer-left">
     <h3>CONNECT WITH ME:</h3>
     <div class="footer-socials">
-      <a href="https://www.linkedin.com/in/euan-patriarca-a29807372/" target="_blank"><img src="img/LI.png"></a>
+      <a href="https://www.linkedin.com/in/kenneth-patriarca-a29807372/" target="_blank"><img src="img/LI.png"></a>
       <a href="https://github.com/kpatriarca" target="_blank"><img src="img/GH.png"></a>
       <a href="https://www.facebook.com/kestptr" target="_blank"><img src="img/FB.png"></a>
-      <a href="https://www.instagram.com/" target="_blank"><img src="img/IG.png"></a>
+      <a href="https://www.instagram.com/kestp_/" target="_blank"><img src="img/IG.png"></a>
     </div>
   </div>
 
