--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
       <div class="contact-card">
         <h2>Contact Information</h2>
-        <p># 09761518104</p>
+        <p># 0976-151-8104</p>
         <p>@ kestpatriarca18@gmail.com</p>
         <p>> 3670 Delos Santos Street, Lourdes Northwest, Angeles City, Pampanga</p>
 
@@ -76,7 +76,7 @@
           <img src="img/IG.png" />
           <div>
             <strong>Instagram</strong>
-            <p>@kespt</p>
+            <p>@kestp_</p>
           </div>
         </div>
       </div>
@@ -105,10 +105,10 @@
   <div class="footer-left">
     <h3>CONNECT WITH ME:</h3>
     <div class="footer-socials">
-      <a href="https://www.linkedin.com/in/euan-patriarca-a29807372/" target="_blank"><img src="img/LI.png"></a>
+      <a href="https://www.linkedin.com/in/kenneth-patriarca-a29807372/" target="_blank"><img src="img/LI.png"></a>
       <a href="https://github.com/kpatriarca" target="_blank"><img src="img/GH.png"></a>
       <a href="https://www.facebook.com/kestptr" target="_blank"><img src="img/FB.png"></a>
-      <a href="https://www.instagram.com/" target="_blank"><img src="img/IG.png"></a>
+      <a href="https://www.instagram.com/kestp_/" target="_blank"><img src="img/IG.png"></a>
     </div>
   </div>
 
