--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <a href="https://github.com/kpatriarca" target="_blank"><img src="img/GH.png" alt="GitHub"></a>
 <a href="https://www.linkedin.com/in/kenneth-patriarca-a29807372/" target="_blank"><img src="img/LI.png" alt="LinkedIn"></a>
 <a href="https://www.facebook.com/kestptr" target="_blank"><img src="img/FB.png" alt="Facebook"></a>
-<a href="https://www.instagram.com/" target="_blank"><img src="img/IG.png" alt="Instagram"></a>
+<a href="https://www.instagram.com/kestp_/" target="_blank"><img src="img/IG.png" alt="Instagram"></a>
 </div>
 </div>
 
@@ -63,7 +63,7 @@
 
 <div class="hero-right">
 <p>I excel at developing concepts into effective web-based solutions that employ innovative technologies. Connect with me as I create pleasant designs that elevate user experiences.</p>
-<a href="#projects" class="btn">VIEW PORTFOLIO</a>
+<a href="projects.html" class="btn">VIEW PORTFOLIO</a>
 </div>
 </section>
 
@@ -105,10 +105,10 @@
   <div class="footer-left">
     <h3>CONNECT WITH ME:</h3>
     <div class="footer-socials">
-      <a href="https://www.linkedin.com/in/euan-patriarca-a29807372/" target="_blank"><img src="img/LI.png"></a>
+      <a href="https://www.linkedin.com/in/kenneth-patriarca-a29807372/" target="_blank"><img src="img/LI.png"></a>
       <a href="https://github.com/kpatriarca" target="_blank"><img src="img/GH.png"></a>
       <a href="https://www.facebook.com/kestptr" target="_blank"><img src="img/FB.png"></a>
-      <a href="https://www.instagram.com/" target="_blank"><img src="img/IG.png"></a>
+      <a href="https://www.instagram.com/kestp_/" target="_blank"><img src="img/IG.png"></a>
     </div>
   </div>
 
