--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
       <aside class="resumea-sidebar" aria-label="Resume Sidebar">
         <header class="resumea-identity">
           <h1>Patriarca, Kenneth Euan Sean T.</h1>
-          <p class="resumea-role">Web Developer | UI/UX Designer</p>
+          <p class="resumea-role">Front-End Web Developer | UI/UX Designer</p>
         </header>
 
         <section class="resumea-block" aria-labelledby="resumea-contact-title">
@@ -126,10 +126,10 @@
   <div class="footer-left">
     <h3>CONNECT WITH ME:</h3>
     <div class="footer-socials">
-      <a href="https://www.linkedin.com/in/euan-patriarca-a29807372/" target="_blank"><img src="img/LI.png" alt="LinkedIn" /></a>
-      <a href="https://github.com/kpatriarca" target="_blank"><img src="img/GH.png" alt="GitHub" /></a>
-      <a href="https://www.facebook.com/kestptr" target="_blank"><img src="img/FB.png" alt="Facebook" /></a>
-      <a href="https://www.instagram.com/" target="_blank"><img src="img/IG.png" alt="Instagram" /></a>
+      <a href="https://www.linkedin.com/in/kenneth-patriarca-a29807372/" target="_blank"><img src="img/LI.png"></a>
+      <a href="https://github.com/kpatriarca" target="_blank"><img src="img/GH.png"></a>
+      <a href="https://www.facebook.com/kestptr" target="_blank"><img src="img/FB.png"></a>
+      <a href="https://www.instagram.com/kestp_/" target="_blank"><img src="img/IG.png"></a>
     </div>
   </div>
 
@@ -146,7 +146,7 @@
   </div>
 
   <p class="copyright">
-    (c)2026. All rights reserved by Kenneth Patriarca
+    ©2026. All rights reserved by Kenneth Patriarca
   </p>
 </footer>
 
